# uran_ws

./: .gitignore  README.md  URAN开发任务清单.md  URAN节点设计文档.md  test_realsense.py  云端与URAN节点通信字段手册.md  功能分析文档-ROS开发组.md  芯烛天巡-OIVS系统技术实现要点.md
scripts/: install_user_services.sh  load_ros_env.sh  start_uran_autostart.sh  start_uran_core.sh  start_uran_media.sh  start_uran_move.sh  uran_core.service  uran_core.user.service  uran_media.service  uran_media.user.service  uran_move.service  uran_move.user.service
src/: CMakeLists.txt
src/uran_autotask/planner/plan_manage/launch/: single_run_in_exp.launch
src/uran_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/uran_core/config/: core.yaml  network.yaml
src/uran_core/launch/: uran_autostart.launch  uran_core.launch  uran_core.launch.py
src/uran_core/scripts/: uran_core_node
src/uran_core/uran_core/: __init__.py  mqtt_client.py  state_manager.py  uran_core_node.py
src/uran_media/: CMakeLists.txt  package.xml  setup.cfg  setup.py  webrtc_signaling_server.py
src/uran_media/config/: media.yaml
src/uran_media/launch/: uran_media.launch  uran_media.launch.py
src/uran_media/scripts/: uran_media_node
src/uran_media/uran_media/: __init__.py  cyberdog2_camera.py  cyberdog2_webrtc_bridge.py  lifecycle_camera.py  realsense_lifecycle.py  rtsp_server.py  uran_media_node.py  webrtc_channel.py
src/uran_move/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/uran_move/config/: plugins.yaml
src/uran_move/direct_lidar_inertial_odometry/src/dlio/: odom.cc
src/uran_move/launch/: uran_move.launch  uran_move.launch.py
src/uran_move/livox_ros_driver2/config/: MID360_config.json
src/uran_move/px4ctrl/config/: ctrl_param_fpv.yaml
src/uran_move/px4ctrl/launch/: run_ctrl.launch
src/uran_move/scripts/: uran_move_node
src/uran_move/uran_move/: plugin_base.py  uran_move_node.py
src/uran_move/uran_move/plugins/: cyberdog2_plugin.py
src/uran_msgs/: CMakeLists.txt  package.xml
src/uran_msgs/msg/: FrpcCtrlCmd.msg  HeartbeatStatus.msg  MediaCtrlCmd.msg  MediaSwitchCmd.msg  ModeSwitchCmd.msg  ParamUpdateCmd.msg  StateField.msg  StateSnapshot.msg  TaskCtrlCmd.msg  UnifiedMoveCmd.msg  UplinkPayload.msg  UplinkProtocolCmd.msg
src/uran_srvs/: CMakeLists.txt  package.xml
src/uran_srvs/srv/: ConfigureStateReport.srv  ConnectProtocol.srv  GetNetworkStatus.srv  GetStateField.srv  GetTaskStatus.srv  ListSensors.srv  ReloadConfig.srv  SetStateField.srv  SwitchMovePlugin.srv  TriggerStateReport.srv
systemd/: uran-autostart.service
