<?xml version="1.0"?>
<package format="2">
  <name>uran_core</name>
  <version>0.1.0</version>
  <description>URAN-core: state space, multi-protocol networking, heartbeat, control switch, uplink/downlink routing</description>
  <maintainer email="dev@example.com">URAN Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uran_msgs</build_depend>
  <build_depend>uran_srvs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uran_msgs</exec_depend>
  <exec_depend>uran_srvs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
</package>
