<?xml version="1.0"?>
<package format="3">
  <name>uran_media</name>
  <version>0.1.0</version>
  <description>URAN-media: WebRTC/RTSP stream channel management with CyberDog2 camera support</description>
  <maintainer email="dev@example.com">URAN Dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>uran_msgs</depend>
  <depend>uran_srvs</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
