<?xml version="1.0"?>
<package format="2">
  <name>uran_media</name>
  <version>0.1.0</version>
  <description>URAN-media: WebRTC/RTSP stream channel management over native ROS image topics</description>
  <maintainer email="dev@example.com">URAN Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uran_msgs</build_depend>
  <build_depend>uran_srvs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uran_msgs</exec_depend>
  <exec_depend>uran_srvs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-gi</exec_depend>
  <exec_depend>gir1.2-gst-rtsp-server-1.0</exec_depend>
</package>
