<?xml version="1.0"?>
<package format="2">
  <name>uran_move</name>
  <version>0.1.0</version>
  <description>URAN-move: translates UnifiedMoveCmd to px4ctrl motion commands for PX4 drones</description>
  <maintainer email="dev@example.com">URAN Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>uran_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>uran_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
