<?xml version="1.0"?>
<package format="2">
  <name>uran_srvs</name>
  <version>0.0.0</version>
  <description>URAN 节点自定义服务定义</description>
  <maintainer email="feiyu@todo.todo">feiyu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
